--- a/index.html
+++ b/index.html
@@ -269,73 +269,58 @@
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
-                      src="./assets/project-1.png"
+                      src="./assets/chessPic.avif"
                       alt="Project 1"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">Project One</h2>
+                  <h2 class="experience-sub-title project-title">Chess Game</h2>
                   <div class="btn-container">
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
+                      onclick="location.href='https://github.com/andreayasmine/chess'"
                     >
                       Github
                     </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
+                    
                   </div>
                 </div>
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
-                      src="./assets/project-2.png"
+                      src="./assets/jesus.avif"
                       alt="Project 2"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">Project Two</h2>
+                  <h2 class="experience-sub-title project-title">Church Website</h2>
                   <div class="btn-container">
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
+                      onclick="location.href='https://github.com/andreayasmine/Church'"
                     >
                       Github
                     </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
+
                   </div>
                 </div>
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
-                      src="./assets/project-3.png"
+                      src="./assets/calenddddd.jpg"
                       alt="Project 3"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">Project Three</h2>
+                  <h2 class="experience-sub-title project-title">Calendar</h2>
                   <div class="btn-container">
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
+                      onclick="location.href='https://github.com/andreayasmine/Final'"
                     >
                       Github
                     </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
+                   
                   </div>
                 </div>
               </div>
