--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="btn-container">
             <button 
             class="btn btn-color-2"
-             onclick="window.open('./assets/resume-andrea.docx')">
+             onclick="window.open('./assets/resume2025ap.pdf')">
              Download CV
             </button>
             <button 
