--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="btn-container">
             <button 
             class="btn btn-color-2"
-             onclick="window.open('./assets/resume2025ap.pdf')">
+             onclick="window.open('./assets/resume2025ap.docx')">
              Download CV
             </button>
             <button 
@@ -282,7 +282,12 @@
                     >
                       Github
                     </button>
-                    
+                    <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://benevolent-brigadeiros-190093.netlify.app/'"
+                  >
+                    Live Demo
+                  </button>
                   </div>
                 </div>
                 <div class="details-container color-container">
@@ -301,7 +306,12 @@
                     >
                       Github
                     </button>
-
+                    <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://jesuswebsite.netlify.app/'"
+                  >
+                    Live Demo
+                  </button>
                   </div>
                 </div>
                 <div class="details-container color-container">
@@ -320,7 +330,12 @@
                     >
                       Github
                     </button>
-                   
+                    <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/andreayasmine/Final'"
+                  >
+                    Live Demo
+                  </button>
                   </div>
                 </div>
               </div>
